--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,7 @@ https://github.com/zagalskij/HammingCode
 1.3: zvezdochiot <mykaralw@yandex.ru>
 
     * magic word
+    * restruct for splint
 
 1.2: zvezdochiot <mykaralw@yandex.ru>
 
